# ml-experiment-stats

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
ml_experiment_stats/: __init__.py  _version.py  ci.py  cli.py  cli_run.py  config.py  diff.py  report.py  results.py  seed.py  statistics.py  visualize.py
tests/: test_ci.py  test_contract.py  test_diff.py  test_report.py  test_results.py  test_statistics.py  test_visualize.py
