[project]
name = "ml-experiment-stats"
dynamic = ["version"]
description = "Statistical analysis engine for ML experiments"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
parquet = ["pyarrow>=15.0"]
plots = ["matplotlib>=3.7"]
bayesian = ["baycomp>=1.0"]
all = [
    "pyarrow>=15.0",
    "matplotlib>=3.7",
    "baycomp>=1.0",
]

[project.urls]
Repository = "https://github.com/kint-pro/ml-experiment-stats"
Issues = "https://github.com/kint-pro/ml-experiment-stats/issues"

[project.scripts]
mlstats = "ml_experiment_stats.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "ml_experiment_stats/_version.py"

[dependency-groups]
test = ["pytest>=8.0"]
dev = [
    { include-group = "test" },
    "pyarrow>=15.0",
    "matplotlib>=3.7",
    "baycomp>=1.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["ml_experiment_stats/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
